backend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rupaya-backend
spec:
  type: ClusterIP
  selector:
    app: rupaya-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
